; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_WindowFromDC.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_WindowFromDC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_OneParamRoutine_WindowFromDC() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = call i64 @GetDC(i32* null)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = trunc i64 %4 to i32
  %6 = call i64 @NtUserCallOneParam(i32 %5, i32 31)
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  %8 = icmp ne i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @TEST(i32 %9)
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @IsWindow(i64 %11)
  %13 = call i32 @TEST(i32 %12)
  %14 = load i64, i64* %2, align 8
  %15 = call i64 (...) @GetDesktopWindow()
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @TEST(i32 %17)
  ret void
}

declare dso_local i64 @GetDC(i32*) #1

declare dso_local i64 @NtUserCallOneParam(i32, i32) #1

declare dso_local i32 @TEST(i32) #1

declare dso_local i32 @IsWindow(i64) #1

declare dso_local i64 @GetDesktopWindow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
